# locomo

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.MD  Taskfile.yml  device_utils.py  docker-compose.yml  env.docker.example  global_methods.py  pyproject.toml
docs/: BENCHMARK_PREP.md  MEMORY_SYSTEM_INTEGRATION_AGENT_PROMPT.md
generative_agents/: event_utils.py  generate_conversations.py  memory_utils.py
locomo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: docker-run.sh  env.sh  evaluate_claude.sh  evaluate_gemini.sh  evaluate_gpts.sh  evaluate_hf_llm.sh  evaluate_rag_gpts.sh  generate_conversations.sh  generate_observations.sh  generate_session_summaries.sh  slice_locomo_qa.py  smoke_eval_qa.sh
task_eval/: claude_utils.py  evaluate_qa.py  evaluation.py  evaluation_stats.py  gemini_utils.py  gpt_utils.py  hf_llm_utils.py  rag_utils.py
